[tool.poetry]
name = "kaya-studios-ai"
version = "1.0.0"
description = "Kaya Studios AI Platform"
authors = ["Egemen Kaya"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
werkzeug = "^3.0.3"
google-generativeai = "^0.8.3"
pillow = "^10.4.0"
firebase-admin = "^6.5.0"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.9"
requests = "^2.32.3"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
